APK_1.4.5: 1.修改设置清除后开机会死机的问题 2.离线授权加上导入列表功能 3.起爆控制选择列表短路退出后没有保存 4.增加丹灵+民爆上传选项 5.加上锁码命令 6.增加充电过程中线路断开提示 7.延期超过16秒提示并不允许继续 8.解决在线检测离线进度条不动的问题

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">中爆终端控制器</string>
-    <string name="device_type">型号：FB-L880</string>
-    <string name="txt_current">电流：</string>
-    <string name="txt_voltage">电压：</string>
+    <string name="device_type">型号:FB-L880</string>
+    <string name="txt_current">电流:</string>
+    <string name="txt_voltage">电压:</string>
     <string name="delay_scheme">延期方案</string>
     <string name="detonate_rec">爆破记录</string>
     <string name="txt_settings">本机设置</string>
@@ -39,21 +39,21 @@
     <string name="table_scheme_name">项目名称</string>
     <string name="table_create_date">创建日期</string>
     <string name="hint_inputDelay">请输入延期</string>
-    <string name="txt_row_delay">*.排间：</string>
-    <string name="txt_inside_delay">#.孔内：</string>
-    <string name="txt_hole_delay">0.孔间：</string>
-    <string name="txt_section_delay">*.段间延期：</string>
-    <string name="txt_section_inside_delay">#.段内延期：</string>
-    <string name="section_delay">段间延期：</string>
-    <string name="section_inside_delay">段内延期：</string>
+    <string name="txt_row_delay">*.排间:</string>
+    <string name="txt_inside_delay">#.孔内:</string>
+    <string name="txt_hole_delay">0.孔间:</string>
+    <string name="txt_section_delay">*.段间延期:</string>
+    <string name="txt_section_inside_delay">#.段内延期:</string>
+    <string name="section_delay">段间延期:</string>
+    <string name="section_inside_delay">段内延期:</string>
     <string name="delay_unit">ms</string>
     <string name="insert_up">向上插入</string>
     <string name="insert_down">向下插入</string>
     <string name="register_line">注册雷管</string>
     <string name="scan_line">扫描雷管</string>
     <string name="manual_line">手动输入</string>
-    <string name="txt_total_line">总数：</string>
-    <string name="txt_total_delay">总时差：</string>
+    <string name="txt_total_line">总数:</string>
+    <string name="txt_total_delay">总时差:</string>
     <string name="detect_method">检测方式</string>
     <string name="detect_barcode_1">1.条码检测</string>
     <string name="detect_line_1">2.脚线检测</string>
@@ -84,6 +84,8 @@
     <string name="bai_se_detector">现场人员信息</string>
     <string name="btn_confirm">确定</string>
     <string name="btn_cancel">取消</string>
+    <string name="btn_exit">退出</string>
+    <string name="btn_ignore">忽略</string>
     <string name="btn_cover">覆盖</string>
     <string name="btn_append">合并</string>
     <string name="display_light">亮度</string>
@@ -92,23 +94,23 @@
     <string name="display_font_scale">字体大小</string>
     <string name="sound_volume">音量</string>
     <string name="sound_vibrate">振动</string>
-    <string name="text_row_num">排号：</string>
-    <string name="text_hole_num">孔号：</string>
-    <string name="text_inside_num">孔内：</string>
-    <string name="text_section_num">段号：</string>
-    <string name="text_section_inside_num">段内：</string>
-    <string name="text_current_delay">当前延期：</string>
-    <string name="text_last_delay">上一发延期：</string>
-    <string name="text_tube_num">管壳码：</string>
-    <string name="text_time_count">时长：</string>
+    <string name="text_row_num">排号:</string>
+    <string name="text_hole_num">孔号:</string>
+    <string name="text_inside_num">孔内:</string>
+    <string name="text_section_num">段号:</string>
+    <string name="text_section_inside_num">段内:</string>
+    <string name="text_current_delay">当前延期:</string>
+    <string name="text_last_delay">上一发延期:</string>
+    <string name="text_tube_num">管壳码:</string>
+    <string name="text_time_count">时长:</string>
     <string name="hint_input_time">05</string>
     <string name="text_time_unit">分钟</string>
     <string name="hint_input_voltage_value">21.0</string>
     <string name="text_voltage_unit">V</string>
     <string name="progress_charging">正在充电，请稍候！</string>
     <string name="btn_continue">继续</string>
-    <string name="used_time">总计用时：</string>
-    <string name="delay_period">总延期：</string>
+    <string name="used_time">总计用时:</string>
+    <string name="delay_period">总延期:</string>
     <string name="check_auth">雷管授权验证</string>
     <string name="det_charge">正在充电</string>
     <string name="det_check">正在检测</string>
@@ -132,19 +134,19 @@
     <string name="progress_reading">正在读取未注册雷管信息</string>
     <string name="progress_upload">正在上传，请稍候！</string>
     <string name="progress_connecting">正在连接设备，请稍候！</string>
-    <string name="progress_total">总进度：%1$d%%</string>
+    <string name="progress_total">总进度:%1$d%%</string>
     <string name="progress_explode">正在做起爆前检测工作，请稍候！</string>
     <string name="mode_open_air">露天</string>
     <string name="mode_tunnel">井巷</string>
     <string name="mode_wireless">远程</string>
     <string name="scheme_mode">多延期方案</string>
     <string name="semi_product_title">半成品检测</string>
-    <string name="select_type">选择雷管类型：</string>
-    <string name="code_text">当前管壳码：___________________</string>
-    <string name="current_text">电流：________μA</string>
-    <string name="voltage_text">电压：________V</string>
-    <string name="normal_text">正常：________发</string>
-    <string name="abnormal_text">异常：________发</string>
+    <string name="select_type">选择雷管类型:</string>
+    <string name="code_text">当前管壳码:___________________</string>
+    <string name="current_text">电流:________μA</string>
+    <string name="voltage_text">电压:________V</string>
+    <string name="normal_text">正常:________发</string>
+    <string name="abnormal_text">异常:________发</string>
     <string name="camera_title">对准摄像头后点击屏幕</string>
     <string name="camera_not_installed">没有安装摄像头！</string>
     <string name="camera_open_fail">打开摄像头失败！</string>
@@ -152,37 +154,40 @@
     <string name="camera_detecting">开始检测，请稍候！</string>
     <string name="camera_not_found">无授权用户！</string>
     <string name="camera_not_detected">检测不到人脸！</string>
-    <string name="enterprise_code">单位代码：</string>
-    <string name="enterprise_id">爆破员身份证号：</string>
-    <string name="enterprise_commercial">是否营业性爆破单位：</string>
-    <string name="enterprise_contract_code">合同编号：</string>
-    <string name="enterprise_project_code">项目编号：</string>
+    <string name="enterprise_code">单位代码:</string>
+    <string name="enterprise_id">爆破员身份证号:</string>
+    <string name="enterprise_commercial">是否营业性爆破单位:</string>
+    <string name="enterprise_contract_code">合同编号:</string>
+    <string name="enterprise_project_code">项目编号:</string>
     <string name="enterprise_not_null">* 必填</string>
     <string name="enterprise_hint">长度不能超过50位</string>
     <string name="enterprise_hint_id">18位，X用小数点代替</string>
     <string name="enterprise_type_project">项目</string>
     <string name="enterprise_type_contract">合同</string>
-    <string name="enterprise_contract_name">合同名称：</string>
-    <string name="enterprise_project_name">项目名称：</string>
-    <string name="enterprise_exploder_name">爆破员姓名：</string>
-    <string name="enterprise_name">爆破公司名称：</string>
-    <string name="enterprise_detector_id">检测员身份证号：</string>
-    <string name="offline_start">起始雷管：</string>
-    <string name="offline_end">末端雷管：</string>
-    <string name="offline_amount">数量：</string>
+    <string name="enterprise_contract_name">合同名称:</string>
+    <string name="enterprise_project_name">项目名称:</string>
+    <string name="enterprise_exploder_name">爆破员姓名:</string>
+    <string name="enterprise_name">爆破公司名称:</string>
+    <string name="enterprise_detector_id">检测员身份证号:</string>
+    <string name="offline_start">起始雷管:</string>
+    <string name="offline_end">末端雷管:</string>
+    <string name="offline_amount">数量:</string>
     <string name="offline_hint">管壳码长度13位</string>
     <string name="add_start">起始:</string>
-    <string name="connect_status">连接状态：</string>
-    <string name="unite_status">联机状态：</string>
+    <string name="connect_status">连接状态:</string>
+    <string name="unite_status">联机状态:</string>
     <string name="subtitle_unite">联机</string>
-    <string name="detonator_total">总共：</string>
-    <string name="detonator_used">已使用：</string>
+    <string name="detonator_total">总共:</string>
+    <string name="detonator_used">已使用:</string>
     <string name="detonator_amount">%1$d条</string>
     <string name="no_delay_time">-- ms</string>
     <string name="map_position_init">经度:— 纬度:—</string>
     <string name="map_position">经度:%1$.4f 纬度:%2$.4f</string>
-    <string name="map_latitude">纬度：</string>
-    <string name="map_longitude">经度：</string>
+    <string name="map_last_position">(上次定位)</string>
+    <string name="map_locate_success">(定位成功)</string>
+    <string name="message_use_last_position">可按#键使用上次定位进入在线检测</string>
+    <string name="map_latitude">纬度:</string>
+    <string name="map_longitude">经度:</string>
     <string name="hint_input_name">请输入名称</string>
     <string name="hint_input_threshold">请输入门限值</string>
     <string name="hint_input_voltage">请输入电压值</string>
@@ -200,8 +205,8 @@
     <string name="bt_device_name">设备名称</string>
     <string name="bt_paired_device">已匹配的设备</string>
     <string name="bt_available_device">可用设备</string>
-    <string name="update_found_new_version">发现新版本：%1$s</string>
-    <string name="update_is_new_version">当前版本：%1$s是最新版本！</string>
+    <string name="update_found_new_version">发现新版本:%1$s</string>
+    <string name="update_is_new_version">当前版本:%1$s是最新版本！</string>
     <string name="update_downloading">正在下载，请稍候！</string>
     <string name="update_download_fail">下载失败！</string>
     <string name="update_checking_version">正在检查版本，请稍候！</string>
@@ -224,8 +229,8 @@
     <string name="unite_host_no_answer">主机无应答！</string>
     <string name="unite_connected_host">主机连接成功！</string>
     <string name="unite_communication_fail">通讯失败！</string>
-    <string name="version_number">版本号：%1$s</string>
-    <string name="device_code">编号：%1$s</string>
+    <string name="version_number">版本号:%1$s</string>
+    <string name="device_code">编号:%1$s</string>
     <string name="received_list">蓝牙接收</string>
     <string name="offline_detonator">离线雷管</string>
     <string name="detect_result">检测结果</string>
@@ -242,8 +247,8 @@
     <string name="message_detonator_not_detected">检测不到雷管！</string>
     <string name="message_detonator_read_shell_error">管壳码读取错误！</string>
     <string name="message_detonator_read_field_error">延期读取错误！</string>
-    <string name="message_detonator_delay_error">管壳码：%1$s\n预设值：%2$dms\n检测值：%3$dms\n延期不一致！</string>
-    <string name="message_detonator_tunnel_download_fail">段号：%1$d 段内：%2$d下载失败！</string>
+    <string name="message_detonator_delay_error">管壳码:%1$s\n预设值:%2$dms\n检测值:%3$dms\n延期不一致！</string>
+    <string name="message_detonator_tunnel_download_fail">段号:%1$d 段内:%2$d下载失败！</string>
     <string name="message_detonator_open_air_download_fail">排号:%1$d 孔号:%2$d 孔内:%3$d下载失败！</string>
     <string name="message_detonator_download_success">修改延期完成！</string>
     <string name="message_detonator_download_fail_amount">还有%1$d发未下载成功，请检查线路！</string>
@@ -252,8 +257,8 @@
     <string name="message_detonator_input_error">输入管壳码有误！</string>
     <string name="message_detonator_duplicate_input">输入管壳码存在！</string>
     <string name="message_amount_input_error">输入数量超出范围！</string>
-    <string name="message_detonator_capacity_status">第%1$d发：%2$s ＃</string>
-    <string name="message_detect_error">雷管信息错误或未连接！</string>
+    <string name="message_detonator_capacity_status">第%1$d发:%2$s ＃</string>
+    <string name="message_detect_error">雷管信息错误！</string>
     <string name="message_detect_finished">检测完成！</string>
     <string name="message_modify_finished">修改完成！</string>
     <string name="message_check_network">请检查网络！</string>
@@ -271,8 +276,8 @@
     <string name="message_input_error">输入格式错误！</string>
     <string name="message_detonator_not_found">列表中未发现%1$s！</string>
     <string name="message_list_not_found">未发现延期列表！</string>
-    <string name="message_current_detonator_exist">当前雷管已存在！列表序号：%1$d。</string>
-    <string name="message_detonator_exist">已存在！列表序号：%1$d。</string>
+    <string name="message_current_detonator_exist">当前雷管已存在！列表序号:%1$d。</string>
+    <string name="message_detonator_exist">已存在！列表序号:%1$d。</string>
     <string name="message_receive_success">列表接收成功！</string>
     <string name="message_receive_data_please_into_bt">请进入蓝牙接收列表！</string>
     <string name="message_send_success">文件发送成功！</string>
@@ -284,11 +289,11 @@
     <string name="message_update_file_error">文件存取错误！</string>
     <string name="message_update_version_error">版本号错误！</string>
     <string name="message_update_get_version_error">获取版本号错误！</string>
-    <string name="message_update_file_size">文件大小：%1$dB</string>
+    <string name="message_update_file_size">文件大小:%1$dB</string>
     <string name="message_fill_enterprise">请先填写企业信息！</string>
     <string name="message_offline_download_fail">下载失败！请检查网络或者企业信息是否正确！</string>
     <string name="message_offline_download_success">离线下载完成！</string>
-    <string name="message_download_unknown_error">未知错误：</string>
+    <string name="message_download_unknown_error">未知错误:</string>
     <string name="message_token_error">Token错误！</string>
     <string name="message_return_data_error">返回数据错误！</string>
     <string name="message_online_check_finished">在线雷管检查完毕！</string>
@@ -368,13 +373,13 @@
     <string name="dialog_scan_first">请先扫码！</string>
     <string name="dialog_qualified">成功！</string>
     <string name="dialog_unqualified">失败！</string>
-    <string name="dialog_unqualified_hint">（错误原因：___________）</string>
+    <string name="dialog_unqualified_hint">（错误原因:___________）</string>
     <string name="dialog_device_title">搜索到设备列表</string>
     <string name="dialog_device_name">设备名</string>
     <string name="dialog_device_address">设备地址</string>
     <string name="dialog_device_signal">信号强度</string>
     <string name="dialog_clear_list">是否确定清除列表？</string>
-    <string name="dialog_explode_status_error">需要检查线路！</string>
+    <string name="dialog_explode_status_error">请别断开线路，需要检测！</string>
     <string name="dialog_exist_offline">检测到有%1$d发离线，请重新在线检测！</string>
     <string name="dialog_exit_explode">是否退出起爆？</string>
     <string name="dialog_exit_detect">是否退出检测？</string>
@@ -390,20 +395,21 @@
     <string name="dialog_confirm_exit_upload">正在上传记录，是否确定退出？</string>
     <string name="dialog_confirm_upload">是否确定上传至%1$s？</string>
     <string name="dialog_confirm_upload_all">是否确定上传%1$d条记录至%2$s？</string>
-    <string name="dialog_confirm_install">是否确定安装版本：%1$s？</string>
+    <string name="dialog_confirm_install">是否确定安装版本:%1$s？</string>
     <string name="dialog_confirm_delete_version">是否确定删除%1$d个版本？</string>
     <string name="dialog_clear_detected">重新选择将清除之前检测的雷管，是否继续？</string>
-    <string name="dialog_delay_out_of_range">最大延期超过6秒，是否继续？</string>
+    <string name="dialog_delay_out_of_range">最大延期超过%1$d秒，请检查列表！</string>
     <string name="dialog_delay_out_of_range_2">延期不能小于0，请检查列表！</string>
     <string name="dialog_detect_again">是否重新检测一遍？</string>
     <string name="dialog_enter_charge">\n进入充电前请工作人员撤离现场！\n</string>
     <string name="dialog_short_circuit">短路保护，请检查线路！</string>
-    <string name="dialog_large_current">可能存在漏电，请检查线路！</string>
+    <string name="dialog_break_circuit">线路已断开连接！</string>
+    <string name="dialog_large_current">存在漏电，请检查线路！</string>
     <string name="dialog_open_circuit">线路已断开，请检查！</string>
     <string name="dialog_confirm_explode">是否确定起爆？</string>
     <string name="dialog_overload">负载超过检测数量！约%1$d发</string>
     <string name="dialog_exit_modify">是否不保存信息？</string>
-    <string name="dialog_found_new_version">发现新版本：%1$s，是否立即更新？</string>
+    <string name="dialog_found_new_version">发现新版本:%1$s\n是否立即更新？</string>
     <string name="menu_send_list">发送列表</string>
     <string name="menu_cancel_pair">取消匹配</string>
     <string name="menu_wifi_connect">连接网络</string>
@@ -458,6 +464,7 @@
     <string name="button_online_auth">在线授权</string>
     <string name="button_offline_auth">离线授权</string>
     <string name="button_online_detect">在线检测</string>
+    <string name="button_last_locate">上次定位</string>
     <string name="button_auth">人员检验</string>
     <string name="button_upload">上传记录</string>
     <string name="button_save_exit">保存退出</string>
@@ -480,6 +487,7 @@
     <string name="button_new_list">新建列表</string>
     <string name="button_offline_download">下载授权</string>
     <string name="button_delete_selected">删除选中</string>
+    <string name="button_import">导入列表</string>
     <string name="button_recheck">重新检测</string>
     <string name="button_cancel_detect">取消检测</string>
     <string name="button_connect_selected">连接选中</string>
@@ -515,7 +523,10 @@
     <string name="semi_error_version">版本错误！</string>;
     <string name="semi_error_data">数据错误！</string>;
     <string name="semi_error_write">写入错误！</string>;
+    <string name="semi_error_lock">锁码错误！</string>;
     <string name="semi_step">第%1$d步</string>;
     <string name="semi_bridge_type1">钢带桥丝！</string>;
     <string name="semi_bridge_type2">贴片桥丝！</string>;
+    <string name="text_write_sn">写码</string>
+    <string name="text_lock_detonator">锁码</string>
 </resources>
